Fix Ticker display issue so that it's correctly displayed on larger devices and hidden on smaller ones

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.FMT__container {
-  overflow: visible !important;
-}
